# McGillHacks

./: CMakeLists.txt  README.md
libs/ImGui/: imgui.h
libs/ImGui/backends/: imgui_impl_glfw.cpp
libs/OpenGL/include/glad/: glad.h
libs/OpenGL/src/: glad.c
source/: Source.cpp
src/: Application.cpp  Application.h  Camera.h  Source.cpp  Vector.h
src/shaders/: compute.glsl  frag.glsl  vertex.glsl
